fix(post): use ResourceNotFoundException for not-found cases and re-enable status filter
Replaced bare RuntimeException for user/post lookups with ResourceNotFoundException
so the global handler maps them to 404. Restored the ACTIVE status filter in
getFeed() that was commented out, and set ACTIVE status on newly created posts.